# new_CW

./: .gitignore  README.md  main.py  pyproject.toml
data/: data_file.json
src/: functions.py  hh_api.py  jsonsaver.py  my_encoder.py  vacancies.py
