[tool.poetry]
name = "env"
version = "0.1.0"
description = ""
authors = ["Alexey Kabaev <kabaev.alexey@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pytest = "^8.2.2"
encoder = "^1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
